BE - Edición de páginas de contenido simple (#214)